--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -146,6 +146,8 @@
   /*.coupons .coupons_wrap{column-width:170px;column-gap:5px;}*/
   .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:15px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
   .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:none;width:100%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .img_box{float:none;width:100;height:auto;padding:1.5%;}
+  .coupons .coupons_wrap .card .img_box img{width:100%;height:auto;object-fit:contain;}
   .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:500;line-height:1;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
