--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -1,15 +1,33 @@
 <div class="layout"><!--layout-->
   <%= render 'shared/header' %>
   
-  <div class="cu_wrap clearfix">
+  <div class="blog_02 clearfix">
     <div class="wrap">
       
       <div class="detitle for_blog">
       </div>
       
       <div class="blog_wrap clearfix">
-        <div class="blog_body">
-          <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+        <div class="cnt_wrap clearfix">
+          <div class="inner">
+            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+            <p>If you are not sign in, sign into your account first</p>
+            <p>Click “Try Prime”</p>
+          </div>
+          <div class="image_box">
+            <img src="">
+          </div>
+        </div>
+
+        <div class="cnt_wrap">
+          <div class="inner">
+            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+            <p>If you are not sign in, sign into your account first</p>
+            <p>Click “Try Prime”</p>
+          </div>
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
         </div>
       </div>
       
