--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -167,76 +167,94 @@
     </div>
 </div>
 
+<!-- <div class="card clearfix" data-tags="Sales">
+  <div class="info_box">
+    <div class="img_box">
+       <a target="_blank" href="https://amzn.to/2UIg7Dm">
+        <img src="https://images.unsplash.com/photo-1538022890810-8f4000ca9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+       </a>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2UIg7Dm">Amazon | KOREAN BEAUTY</a></h3>
+    <p>Amazon offers various Korean Beauty brands. From Skin Care to Makeup and curated the innovative Korean Beauty products from the most wanted brands including COSRX, The Face Shop, Etude House, Skederm, Dermal and Nature Republic.</p>
+    <span>Expiration: on going</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2UIg7Dm">Shop Now</a>
+  </div>
+</div> -->
+
 <div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <div class="img_box">
-         <a target="_blank" href="https://amzn.to/2UIg7Dm">
-          <img src="https://images.unsplash.com/photo-1538022890810-8f4000ca9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
-         </a>
-      </div>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2UIg7Dm">Amazon | KOREAN BEAUTY</a></h3>
-      <p>Amazon offers various Korean Beauty brands. From Skin Care to Makeup and curated the innovative Korean Beauty products from the most wanted brands including COSRX, The Face Shop, Etude House, Skederm, Dermal and Nature Republic.</p>
-      <span>Expiration: on going</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="https://amzn.to/2UIg7Dm">Shop Now</a>
-    </div>
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2O2ywbK">
+      <p><span>80%</span><br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2O2ywbK">Amazon | Up to 80% off Warehouse Products</a></h3>
+    <p>Amazon Warehouse offers deals on hundreds of thousands of warehouse-damaged, returned, open-box, and pre-owned items.<br /><a target="_blank" href="https://amzn.to/2TBHgeN">[see warehouse products condition]</a></p>
+    <span>Expiration: on going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2O2ywbK">Shop Now</a>
+  </div>
 </div>
 
 <div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2O2ywbK">
-        <p><span>80%</span><br /><em>OFF</em></p>
-      </a>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2O2ywbK">Amazon | Up to 80% off Warehouse Products</a></h3>
-      <p>Amazon Warehouse offers deals on hundreds of thousands of warehouse-damaged, returned, open-box, and pre-owned items.<br /><a target="_blank" href="https://amzn.to/2TBHgeN">[see warehouse products condition]</a></p>
-      <span>Expiration: on going</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2O2ywbK">Shop Now</a>
-    </div>
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2O51wiS">
+      <p><span>60%</span><br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2O51wiS">Amazon | Up to 60% off amazon fashion</a></h3>
+    <p>Save up to 60% off on clothing, shoes, jewelry, watches, and more.</p>
+    <span>Expiration: on going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2O51wiS">Shop Now</a>
+  </div>
 </div>
 
 <div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2O51wiS">
-        <p><span>60%</span><br /><em>OFF</em></p>
-      </a>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2O51wiS">Amazon | Up to 60% off amazon fashion</a></h3>
-      <p>Save up to 60% off on clothing, shoes, jewelry, watches, and more.</p>
-      <span>Expiration: on going</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2O51wiS">Shop Now</a>
-    </div>
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2CsbFSb">
+      <p><span>70%</span><br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2CsbFSb">70% off ZORJAR Women Fashion</a></h3>
+    <p>Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Scarves For Womens,29"x78"Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Sc…</p>
+    <span>Expiration: Mar 31, 2019 at 11:59 PM PDT</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2CsbFSb">Shop Now</a>
+  </div>
 </div>
 
-
-<div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2CsbFSb">
-        <p><span>70%</span><br /><em>OFF</em></p>
-      </a>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2CsbFSb">70% off ZORJAR Women Fashion</a></h3>
-      <p>Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Scarves For Womens,29"x78"Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Sc…</p>
-      <span>Expiration: Mar 31, 2019 at 11:59 PM PDT</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2CsbFSb">Shop Now</a>
-    </div>
+ <div class="card clearfix" data-tags="Sales">
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2XH2c1C">
+      <p><span>50%</span><br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2XH2c1C">Up to 50% off | Great deals on like-new products on Amazon Renewed</a></h3>
+    <p>Products on Amazon Renewed have been inspected and tested by qualified suppliers to work and look like new, and come with a minimum 90-day supplier-backed warranty. Get great deals on smartphones, computers, laptops, tablets, home and kitchen appliances, game consoles, office products, and more.</p>
+    <span>Expiration: On going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XH2c1C">Shop Now</a>
+  </div>
 </div>
+
+<!--------------------------------------------------- Deals --------------------------------------------------->
 
  <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
@@ -285,26 +303,6 @@
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
-     <a target="_blank" href="https://amzn.to/2DN6AEE"><img src="https://m.media-amazon.com/images/I/61U7T1koQqL._AC_UL436_.jpg" alt="SanDisk SSD" /> </a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>14% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2DN6AEE">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s, 2.5"/7mm - SDSSDA-1T00-G26</a></p>
-    <span class="dis_price">$107.99</span><span class="org_price">$124.99</span>
-  </div> 
-  <div class="deal_btn">
-    <a href="https://amzn.to/2DN6AEE">Shop Now</a>
-  </div>
-</div>
-
-
-
-
-<!--------------------------------------------------- Deals --------------------------------------------------->
-
-<div class="card clearfix" data-tags="Deals">
-  <div class="img_box">
      <a target="_blank" href="https://amzn.to/2VKuiMb"><img src="https://m.media-amazon.com/images/I/81fNxrEV8bL._AC_UL436_.jpg" alt="" /> </a>
   </div>
   <div class="inner">
@@ -348,21 +346,5 @@
   </div>
 </div>
 
- <div class="card clearfix" data-tags="Sales">
-  <div class="info_box">
-    <a target="_blank" href="https://amzn.to/2XH2c1C">
-      <p><span>50%</span><br /><em>OFF</em></p>
-    </a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>Sales</em></span>
-    <h3><a target="_blank" href="https://amzn.to/2XH2c1C">Up to 50% off | Great deals on like-new products on Amazon Renewed</a></h3>
-    <p>Products on Amazon Renewed have been inspected and tested by qualified suppliers to work and look like new, and come with a minimum 90-day supplier-backed warranty. Get great deals on smartphones, computers, laptops, tablets, home and kitchen appliances, game consoles, office products, and more.</p>
-    <span>Expiration: On going</span>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XH2c1C">Shop Now</a>
-  </div>
-</div>
 
 
