--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,276 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VMaRCK"><img src="https://m.media-amazon.com/images/I/61kWaezYFdL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VMaRCK">3D Printed Moon Lamp, Seamless Moon Light,Touch&TAP Control</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $20.00</strong> using code:504BYUVY</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VMaRCK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GUFKvc"><img src="https://m.media-amazon.com/images/I/511mj86mEKL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GUFKvc">Single Wireless Earbud with HD Sound Quality, Invisible Bluetooth Headphone</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $21.99</strong> using code:50D247UM</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GUFKvc">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="72" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y0zV6i"><img src="https://m.media-amazon.com/images/I/61sNn-ZYQ-L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>72% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y0zV6i">Cell Phone Stand, LOBKIN Metal PhoneTablet Cradle, Holder, Stand,for iPhone 8 X 7 6 6s Plus 5 5s 5c Charging</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>72% off at $19.99</strong> using code:72QYHWGJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y0zV6i">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H4sRjG"><img src="https://m.media-amazon.com/images/I/61pPtdRx9-L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H4sRjG">Bluetooth Car Speakerphone, Aigital Wireless Hands-Free Speaker Motion AUTO Power ON Car Receiver Sun Visor Music Player Adapter Built-in Microphone</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $21.99</strong> using code:15E5T515</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H4sRjG">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H1frnd"><img src="https://m.media-amazon.com/images/I/71x7YL3EXSL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H1frnd">Organic Aromatherapy Essential Oil Set– 6 Bottles Aromatherapy Essential Oil Eucalyptus...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $14.99</strong> using code:40UP343O</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H1frnd">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="135.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DOeM7V"><img src="https://images-na.ssl-images-amazon.com/images/I/61M7yxP7roL._SX522_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DOeM7V">Foot Massage AREALER Kneading Shiatsu Therapy Feet Massage Machine with Deep-Kneading...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>28% off at $135.99</strong> using code:M33PD44C</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DOeM7V">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="6.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6zwPS"><img src="https://m.media-amazon.com/images/I/61FRqk9Cv+L._SR400,400_.jpg" alt="Battery Tester" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6zwPS">D-FantiX Battery Tester, Universal Battery Checker for AA AAA C D 9V 1.5V Button Cell Batteries (Model: BT-168)</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $6.99</strong> using code:305RWB1N</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y6zwPS">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y7d2y1"><img src="https://m.media-amazon.com/images/I/41TFBSozk3L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y7d2y1">Puck Lights with Remote Control 3 Pack, Wireless Multi-Function Battery Operated Lights</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $15.99</strong> using code:40SBH8G4</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y7d2y1">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="249.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VK1gfC"><img src="https://m.media-amazon.com/images/I/61gjtXo3voL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VK1gfC">LNC A02992 Pendant 6-Light Chandeliers with E26 Ceramic Bulb Base, Adjustable Length, UL Certification, Ideal for Farm House, Living Room...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $249.99</strong> using code:45YG3NBW</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VK1gfC">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H5YedH"><img src="https://m.media-amazon.com/images/I/61LbdDnrqCL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H5YedH">Aibocn Phone-Sized Personal Handheld Fan, Stong Wind Portable Fan, Quiet USB Rechargeable Air Fan</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $15.99</strong> using code:60Z1DV2I</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H5YedH">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JfxBUY"><img src="https://m.media-amazon.com/images/I/51YxKeZKJfL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JfxBUY">TEESSO WIFI Smart Plug Compatible with Alexa, Google Home, IFTTT, Mini Wireless Outlet Switch Remote Control Your Devices</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $19.99</strong> using code:40DYOOSF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JfxBUY">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="399.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VHX5kt"><img src="https://images-na.ssl-images-amazon.com/images/I/51dGkcO608L._SX679_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VHX5kt">Bidet Smart Toilet Seat in Round White with Stainless Steel Self-Cleaning Nozzle, Nightlight, Turbo Wash, Oscillating</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $399.00</strong> using code:100OASIS</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VHX5kt">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DOAd8y"><img src="https://m.media-amazon.com/images/I/71ic8c-lXqL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DOAd8y">Fixed Showerhead High Water Pressure -4″ Anti-leak Anti-clog 5 Spray Settings Chrome Shower head</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $17.99</strong> using code:40V5QODH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DOAd8y">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LjYtWl"><img src="https://m.media-amazon.com/images/I/51cOMicXDbL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LjYtWl">Gerintech LED Desk Lamp with USB Charging Port for Study, Dimmable Hue Table Lamp with Clock</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $39.99</strong> using code:30X3UGFJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LjYtWl">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="45.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VKbRai"><img src="https://m.media-amazon.com/images/I/51Xn+vbOTtL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VKbRai">Gerintech LED Desk Lamp Dimmable Table Lamp with Clock, USB Charging Port and Color Changing Base for Office or Study Desk</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $45.99</strong> using code:20YXT955</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VKbRai">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="49.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2ZOPUpM"><img src="https://images-na.ssl-images-amazon.com/images/I/31UaR2-zDvL.jpg" alt="" /></a>
