--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wc7JwS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Wc7JwS">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XQCwQg">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XQCwQg">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Pxrxs9">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Pxrxs9">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Lahnzb">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Lahnzb">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GFaosi">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GFaosi">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Pxs2m1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Pxs2m1">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GFT1I1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GFT1I1">Use Code</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UNwQEV">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UNwQEV">Use Code</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DAko5C">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DAko5C">Use Code</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2L9c3vC">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2L9c3vC">Use Code</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GP5k64">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GP5k64">Use Code</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XV1A8N">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XV1A8N">Use Code</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J1tyeI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J1tyeI">Use Code</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DAQUVa">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DAQUVa">Use Code</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ULcFaj">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ULcFaj">Use Code</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DARmmk">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DARmmk">Use Code</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DDXoCu">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DDXoCu">Use Code</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DE0u9C">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DE0u9C">Use Code</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2L8S2pd">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2L8S2pd">Use Code</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IMDdXi">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2IMDdXi">Use Code</a>
   </div>
 </div>
 
