--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PMFFhm">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PMFFhm">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PMD2vR">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PMD2vR">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJtlOI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJtlOI">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2H0TBAm">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2H0TBAm">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y6oWbI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y6oWbI">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UXsY4e">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UXsY4e">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2H159EN">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2H159EN">Use Code</a>
   </div>
 </div>
 
@@ -137,7 +137,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VMaAzq">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VMaAzq">Use Code</a>
   </div>
 </div>
 
@@ -155,7 +155,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y4b7dI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y4b7dI">Use Code</a>
   </div>
 </div>
 
@@ -173,7 +173,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LgKqkq">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LgKqkq">Use Code</a>
   </div>
 </div>
 
@@ -191,7 +191,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZTEwsR">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZTEwsR">Use Code</a>
   </div>
 </div>
 
@@ -209,7 +209,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UYrOW3">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UYrOW3">Use Code</a>
   </div>
 </div>
 
@@ -227,7 +227,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GYM3yY">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GYM3yY">Use Code</a>
   </div>
 </div>
 
@@ -245,7 +245,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VDuUTR">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VDuUTR">Use Code</a>
   </div>
 </div>
 
@@ -263,7 +263,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DLsS9T">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DLsS9T">Use Code</a>
   </div>
 </div>
 
@@ -281,7 +281,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJHwU0">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJHwU0">Use Code</a>
   </div>
 </div>
 
@@ -299,7 +299,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y0m2F6">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y0m2F6">Use Code</a>
   </div>
 </div>
 
@@ -317,7 +317,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JjJ05Y">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JjJ05Y">Use Code</a>
   </div>
 </div>
 
@@ -335,7 +335,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2H1WKAX">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2H1WKAX">Use Code</a>
   </div>
 </div>
 
@@ -353,7 +353,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y7R3HA">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y7R3HA">Use Code</a>
   </div>
 </div>
 
@@ -371,7 +371,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJAChq">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJAChq">Use Code</a>
   </div>
 </div>
 
@@ -389,7 +389,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DM5eu7">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DM5eu7">Use Code</a>
   </div>
 </div>
 
@@ -407,7 +407,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DMv2WS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DMv2WS">Use Code</a>
   </div>
 </div>
 
@@ -425,7 +425,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DJsvN6">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DJsvN6">Use Code</a>
   </div>
 </div>
 
@@ -443,7 +443,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PMLjjy">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PMLjjy">Use Code</a>
   </div>
 </div>
 
@@ -461,7 +461,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GYS3YG">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GYS3YG">Use Code</a>
   </div>
 </div>
 
@@ -479,7 +479,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PLSPuJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PLSPuJ">Use Code</a>
   </div>
 </div>
 
@@ -497,7 +497,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y0oCuM">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y0oCuM">Use Code</a>
   </div>
 </div>
 
@@ -515,7 +515,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GYSLVQ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GYSLVQ">Use Code</a>
   </div>
 </div>
 
@@ -533,6 +533,6 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V9Shoq">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V9Shoq">Use Code</a>
   </div>
 </div>
