--- a/app/views/promocodes_days/_lt_cnt.html.erb
+++ b/app/views/promocodes_days/_lt_cnt.html.erb
@@ -13,9 +13,10 @@
     <li>
       <a href="#n">HOW TO USE</a>
       <ul>
-        <li>Click "Copy & Use code"</li>
+        <li>Copy "Promotional Code"</li>
+        <li>Click "Use Code"</li>
         <li>Click "Buy Now or Add to Cart"</li>
-        <li>Proceed with payment then the code is automatically applied.</li>
+        <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
       </ul>
     </li>
     <li>
