--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -23,9 +23,11 @@
             <li>
               <a href="#n">HOW TO USE</a>
               <ul>
-                <li>Click "Copy & Use code"</li>
+                <li>Copy "Promotional Code"</li>
+                <li>Click "Use Code"</li>
                 <li>Click "Buy Now or Add to Cart"</li>
-                <li>Proceed with payment then the code is automatically applied.</li>
+                <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
+                <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
               </ul>
             </li>
             <li>
