--- a/app/views/promocodes_days/_day_03.html.erb
+++ b/app/views/promocodes_days/_day_03.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WcARE5">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WcARE5">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J48wfu">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J48wfu">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GMOyDv">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GMOyDv">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XYYtwF">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XYYtwF">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DBdEEo">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DBdEEo">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VEhx5A">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VEhx5A">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WeyT68">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WeyT68">Use Code</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XWyE0i">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XWyE0i">Use Code</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J9xmKS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J9xmKS">Use Code</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WcA4mB">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WcA4mB">Use Code</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VxBACY">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VxBACY">Use Code</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VxXvtE">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VxXvtE">Use Code</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XV9RcG">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XV9RcG">Use Code</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZH5LXt">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZH5LXt">Use Code</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GQ9H0u">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GQ9H0u">Use Code</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VtX5ob">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VtX5ob">Use Code</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2INcp9q">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2INcp9q">Use Code</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DEufXZ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DEufXZ">Use Code</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DDfvst">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DDfvst">Use Code</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Vw5l7c">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Vw5l7c">Use Code</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J1Ufjw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J1Ufjw">Use Code</a>
   </div>
 </div>
 
@@ -390,7 +390,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VDa4nk">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VDa4nk">Use Code</a>
   </div>
 </div>
 
@@ -408,7 +408,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DClHRj">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DClHRj">Use Code</a>
   </div>
 </div>
 
@@ -426,7 +426,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GQfHXb">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GQfHXb">Use Code</a>
   </div>
 </div>
 
@@ -444,7 +444,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DD3Tps">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DD3Tps">Use Code</a>
   </div>
 </div>
 
@@ -462,7 +462,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DEPclx">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DEPclx">Use Code</a>
   </div>
 </div>
 
@@ -480,7 +480,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Vsydgw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Vsydgw">Use Code</a>
   </div>
 </div>
 
@@ -498,7 +498,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Vw5Q14">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Vw5Q14">Use Code</a>
   </div>
 </div>
 
@@ -516,7 +516,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Vv6AU5">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Vv6AU5">Use Code</a>
   </div>
 </div>
 
@@ -534,7 +534,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XUokpw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XUokpw">Use Code</a>
   </div>
 </div>
 
@@ -552,7 +552,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IPjp5I">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2IPjp5I">Use Code</a>
   </div>
 </div>
 
@@ -570,7 +570,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XSiiFO">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XSiiFO">Use Code</a>
   </div>
 </div>
 
@@ -588,7 +588,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GHEtrn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GHEtrn">Use Code</a>
   </div>
 </div>
 
@@ -606,7 +606,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VAbXkW">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VAbXkW">Use Code</a>
   </div>
 </div>
 
@@ -624,7 +624,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2INYeB3">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2INYeB3">Use Code</a>
   </div>
 </div>
 
@@ -642,7 +642,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZHunzn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZHunzn">Use Code</a>
   </div>
 </div>
 
@@ -660,7 +660,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DF09DA">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DF09DA">Use Code</a>
   </div>
 </div>
 
@@ -678,7 +678,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DD6eAH">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DD6eAH">Use Code</a>
   </div>
 </div>
 
@@ -696,7 +696,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XThCQE">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XThCQE">Use Code</a>
   </div>
 </div>
 
@@ -714,7 +714,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Vw7wHU">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Vw7wHU">Use Code</a>
   </div>
 </div>
 
@@ -732,7 +732,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ILhsax">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ILhsax">Use Code</a>
   </div>
 </div>
 
