--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y26z7R">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y26z7R">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J5SO3J">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J5SO3J">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XWBgv4">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XWBgv4">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZMdfIQ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZMdfIQ">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Jcma0r">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Jcma0r">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XX4o5f">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XX4o5f">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VDTKTm">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VDTKTm">Use Code</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VylPvA">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VylPvA">Use Code</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DARWQL">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DARWQL">Use Code</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DFUU6N">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DFUU6N">Use Code</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XXFtia">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XXFtia">Use Code</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y28t8v">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y28t8v">Use Code</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J4zHqs">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J4zHqs">Use Code</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GR9YQS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GR9YQS">Use Code</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GSGQZt">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GSGQZt">Use Code</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LfzmUH">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LfzmUH">Use Code</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wlbro9">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Wlbro9">Use Code</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DEAxqy">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DEAxqy">Use Code</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XZWw33">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XZWw33">Use Code</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WanmoE">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WanmoE">Use Code</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wao3yg">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Wao3yg">Use Code</a>
   </div>
 </div>
 
@@ -390,7 +390,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LgItVc">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LgItVc">Use Code</a>
   </div>
 </div>
 
@@ -408,7 +408,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XXGXce">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XXGXce">Use Code</a>
   </div>
 </div>
 
@@ -426,7 +426,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J31tnu">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J31tnu">Use Code</a>
   </div>
 </div>
 
@@ -444,7 +444,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GS2opk">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GS2opk">Use Code</a>
   </div>
 </div>
 
@@ -462,7 +462,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZM2PZt">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZM2PZt">Use Code</a>
   </div>
 </div>
 
@@ -480,7 +480,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2W97uTf">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2W97uTf">Use Code</a>
   </div>
 </div>
 
@@ -498,7 +498,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wlc6WF">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Wlc6WF">Use Code</a>
   </div>
 </div>
 
@@ -516,7 +516,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XX6Rg1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XX6Rg1">Use Code</a>
   </div>
 </div>
 
@@ -534,7 +534,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XZDzNZ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XZDzNZ">Use Code</a>
   </div>
 </div>
 
