--- a/app/views/promocodes_days/_day_05.html.erb
+++ b/app/views/promocodes_days/_day_05.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LjRw7Q">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LjRw7Q">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J6AdEx">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J6AdEx">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2USkbAn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2USkbAn">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GVDbu2">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GVDbu2">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Lc2hsK">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Lc2hsK">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PI1mir">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PI1mir">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LhIUi8">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LhIUi8">Use Code</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PF1Rtw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PF1Rtw">Use Code</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UUdEFo">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UUdEFo">Use Code</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DJe3Vr">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DJe3Vr">Use Code</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Lf9LLz">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Lf9LLz">Use Code</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LuO1vB">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LuO1vB">Use Code</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UNDWsQ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UNDWsQ">Use Code</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PIT0aq">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PIT0aq">Use Code</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Li3Zc3">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Li3Zc3">Use Code</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DHCrGW">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DHCrGW">Use Code</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LiRXPJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LiRXPJ">Use Code</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LhK79a">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LhK79a">Use Code</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y0J7HT">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y0J7HT">Use Code</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZKvcaJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZKvcaJ">Use Code</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V89gHH">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V89gHH">Use Code</a>
   </div>
 </div>
 
@@ -390,7 +390,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PE5OPj">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PE5OPj">Use Code</a>
   </div>
 </div>
 
@@ -408,7 +408,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PFamEU">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PFamEU">Use Code</a>
   </div>
 </div>
 
@@ -426,7 +426,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Lc5CYO">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Lc5CYO">Use Code</a>
   </div>
 </div>
 
@@ -444,7 +444,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WnxwCx">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WnxwCx">Use Code</a>
   </div>
 </div>
 
@@ -462,7 +462,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VxGD6p">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VxGD6p">Use Code</a>
   </div>
 </div>
 
@@ -480,7 +480,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y10oR5">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y10oR5">Use Code</a>
   </div>
 </div>
 
@@ -498,7 +498,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y0NHWO">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y0NHWO">Use Code</a>
   </div>
 </div>
 
@@ -516,7 +516,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GNCmSJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GNCmSJ">Use Code</a>
   </div>
 </div>
 
@@ -534,7 +534,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PNOEil">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PNOEil">Use Code</a>
   </div>
 </div>
 
@@ -552,7 +552,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y11SuD">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y11SuD">Use Code</a>
   </div>
 </div>
 
@@ -570,7 +570,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZN5emW">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZN5emW">Use Code</a>
   </div>
 </div>
 
@@ -588,7 +588,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LptWGC">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LptWGC">Use Code</a>
   </div>
 </div>
 
@@ -606,7 +606,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LhVGx9">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LhVGx9">Use Code</a>
   </div>
 </div>
 
@@ -624,7 +624,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Lu02Bt">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Lu02Bt">Use Code</a>
   </div>
 </div>
 
@@ -642,7 +642,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Wj8Niv">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Wj8Niv">Use Code</a>
   </div>
 </div>
 
@@ -660,7 +660,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LcBfkT">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LcBfkT">Use Code</a>
   </div>
 </div>
 
@@ -678,7 +678,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DIkDLT">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DIkDLT">Use Code</a>
   </div>
 </div>
 
@@ -696,7 +696,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LckDtz">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LckDtz">Use Code</a>
   </div>
 </div>
 
@@ -714,7 +714,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WfGphn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WfGphn">Use Code</a>
   </div>
 </div>
 
@@ -732,7 +732,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V4vgU1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V4vgU1">Use Code</a>
   </div>
 </div>
 
@@ -750,7 +750,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GP16Kn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GP16Kn">Use Code</a>
   </div>
 </div>
 
@@ -768,7 +768,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LcBvjR">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LcBvjR">Use Code</a>
   </div>
 </div>
 
@@ -786,7 +786,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V7Susn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V7Susn">Use Code</a>
   </div>
 </div>
 
@@ -804,7 +804,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V8ZS6C">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V8ZS6C">Use Code</a>
   </div>
 </div>
 
@@ -822,7 +822,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DFOTXO">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DFOTXO">Use Code</a>
   </div>
 </div>
 
@@ -840,7 +840,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y40Azn">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y40Azn">Use Code</a>
   </div>
 </div>
 
@@ -858,7 +858,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WiLZzw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WiLZzw">Use Code</a>
   </div>
 </div>
 
@@ -876,7 +876,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DIfOC7">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DIfOC7">Use Code</a>
   </div>
 </div>
 
@@ -894,7 +894,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V4xkeJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V4xkeJ">Use Code</a>
   </div>
 </div>
 
@@ -912,7 +912,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VyFgV1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VyFgV1">Use Code</a>
   </div>
 </div>
 
@@ -930,7 +930,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DF1Vow">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DF1Vow">Use Code</a>
   </div>
 </div>
 
@@ -948,7 +948,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WgbrWd">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2WgbrWd">Use Code</a>
   </div>
 </div>
 
@@ -966,7 +966,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DGEdYJ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DGEdYJ">Use Code</a>
   </div>
 </div>
 
@@ -984,7 +984,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DI7X7J">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DI7X7J">Use Code</a>
   </div>
 </div>
 
@@ -1002,7 +1002,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GWbj9f">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GWbj9f">Use Code</a>
   </div>
 </div>
 
@@ -1020,7 +1020,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GUMBWy">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GUMBWy">Use Code</a>
   </div>
 </div>
 
@@ -1038,7 +1038,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DGXlGe">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DGXlGe">Use Code</a>
   </div>
 </div>
 
@@ -1056,7 +1056,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DKpYSR">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DKpYSR">Use Code</a>
   </div>
 </div>
 
@@ -1074,7 +1074,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZNz7Dr">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2ZNz7Dr">Use Code</a>
   </div>
 </div>
 
