--- a/app/views/promocodes_days/_day_06.html.erb
+++ b/app/views/promocodes_days/_day_06.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Jbj8td">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Jbj8td">Use Code</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PLsfSK">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PLsfSK">Use Code</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LkU7OL">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LkU7OL">Use Code</a>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJPT1H">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJPT1H">Use Code</a>
   </div>
 </div>
 
@@ -84,7 +84,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2UWuDXx">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2UWuDXx">Use Code</a>
   </div>
 </div>
 
@@ -102,7 +102,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DIXFEi">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DIXFEi">Use Code</a>
   </div>
 </div>
 
@@ -120,7 +120,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DM9iu8">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DM9iu8">Use Code</a>
   </div>
 </div>
 
@@ -138,7 +138,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2V98YQQ">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2V98YQQ">Use Code</a>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VDWjoK">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VDWjoK">Use Code</a>
   </div>
 </div>
 
@@ -174,7 +174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JjC751">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JjC751">Use Code</a>
   </div>
 </div>
 
@@ -192,7 +192,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJBQcC">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJBQcC">Use Code</a>
   </div>
 </div>
 
@@ -210,7 +210,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GYruCS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GYruCS">Use Code</a>
   </div>
 </div>
 
@@ -228,7 +228,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VbHhqx">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VbHhqx">Use Code</a>
   </div>
 </div>
 
@@ -246,7 +246,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GXMTMp">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GXMTMp">Use Code</a>
   </div>
 </div>
 
@@ -264,7 +264,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DNauNX">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DNauNX">Use Code</a>
   </div>
 </div>
 
@@ -282,7 +282,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DLEEkA">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DLEEkA">Use Code</a>
   </div>
 </div>
 
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PKfmZ1">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PKfmZ1">Use Code</a>
   </div>
 </div>
 
@@ -318,7 +318,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GXZNcm">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GXZNcm">Use Code</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DLKe6u">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DLKe6u">Use Code</a>
   </div>
 </div>
 
@@ -354,7 +354,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GWgGFb">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GWgGFb">Use Code</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DLAj0P">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DLAj0P">Use Code</a>
   </div>
 </div>
 
@@ -390,7 +390,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GPezSw">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GPezSw">Use Code</a>
   </div>
 </div>
 
@@ -408,7 +408,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2vz4wf3">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2vz4wf3">Use Code</a>
   </div>
 </div>
 
@@ -426,7 +426,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GXFAEL">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GXFAEL">Use Code</a>
   </div>
 </div>
 
@@ -444,7 +444,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JaPVhY">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JaPVhY">Use Code</a>
   </div>
 </div>
 
@@ -462,7 +462,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DLImL0">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DLImL0">Use Code</a>
   </div>
 </div>
 
@@ -480,7 +480,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JagML6">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JagML6">Use Code</a>
   </div>
 </div>
 
@@ -498,7 +498,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2H1wA1r">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2H1wA1r">Use Code</a>
   </div>
 </div>
 
@@ -516,7 +516,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DJYdtI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DJYdtI">Use Code</a>
   </div>
 </div>
 
@@ -534,7 +534,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2vAU5Ym">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2vAU5Ym">Use Code</a>
   </div>
 </div>
 
@@ -552,7 +552,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2vzzSm0">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2vzzSm0">Use Code</a>
   </div>
 </div>
 
@@ -570,7 +570,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2H09V5C">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2H09V5C">Use Code</a>
   </div>
 </div>
 
@@ -588,7 +588,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DKIB9r">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DKIB9r">Use Code</a>
   </div>
 </div>
 
@@ -606,7 +606,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GXO1jc">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GXO1jc">Use Code</a>
   </div>
 </div>
 
@@ -624,7 +624,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DIQJHt">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DIQJHt">Use Code</a>
   </div>
 </div>
 
@@ -642,7 +642,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y10Cbe">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y10Cbe">Use Code</a>
   </div>
 </div>
 
@@ -660,7 +660,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JbTeoX">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JbTeoX">Use Code</a>
   </div>
 </div>
 
@@ -678,7 +678,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J6WvWI">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J6WvWI">Use Code</a>
   </div>
 </div>
 
@@ -696,7 +696,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y4RRgj">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y4RRgj">Use Code</a>
   </div>
 </div>
 
@@ -714,7 +714,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LesXJh">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LesXJh">Use Code</a>
   </div>
 </div>
 
@@ -732,7 +732,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GWetcV">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GWetcV">Use Code</a>
   </div>
 </div>
 
@@ -750,7 +750,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2PJlYqz">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2PJlYqz">Use Code</a>
   </div>
 </div>
 
@@ -768,7 +768,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XYHp9T">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2XYHp9T">Use Code</a>
   </div>
 </div>
 
@@ -786,7 +786,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VbhgHU">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VbhgHU">Use Code</a>
   </div>
 </div>
 
@@ -804,7 +804,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2DMFaiu">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2DMFaiu">Use Code</a>
   </div>
 </div>
 
@@ -822,7 +822,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y3hfmj">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y3hfmj">Use Code</a>
   </div>
 </div>
 
@@ -840,7 +840,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y27DZ0">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y27DZ0">Use Code</a>
   </div>
 </div>
 
@@ -858,7 +858,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Y09EFg">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2Y09EFg">Use Code</a>
   </div>
 </div>
 
@@ -876,7 +876,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2JhGfm3">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2JhGfm3">Use Code</a>
   </div>
 </div>
 
@@ -894,7 +894,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2J8EkA4">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2J8EkA4">Use Code</a>
   </div>
 </div>
 
@@ -912,7 +912,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VaXjRM">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VaXjRM">Use Code</a>
   </div>
 </div>
 
@@ -930,7 +930,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2LjbU9e">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2LjbU9e">Use Code</a>
   </div>
 </div>
 
@@ -948,7 +948,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VeYYpz">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2VeYYpz">Use Code</a>
   </div>
 </div>
 
@@ -966,7 +966,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2GVziVS">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2GVziVS">Use Code</a>
   </div>
 </div>
 
